--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
         "async"     : "~0.2",
         "glob"      : "3.x",
         "handlebars": "1.x",
-        "semver"    : "2.x"
+        "semver"    : "2.x",
+        "underscore": "1.5.2"
+
     },
 
     "devDependencies": {
